# hashlife

./: .gitignore  Cargo.toml  README.md  index.html  index.js
frontend/: index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: canvas.ts  handler.ts  index.ts  temp.ts
frontend/styles/: styles.css
src/: cell.rs  cell_factory.rs  cell_manager.rs  lib.rs  main.rs  node_factory.rs  temp.rs  utils.rs
