[package]
name = "life-new"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default=["console_error_panic_hook"]

[dependencies]
wasm-bindgen="0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version="0.3"
features=["console"]
